# pipelines

./: .env  .gitignore  ReadMe.md  pyproject.toml
dags/: dbt.py  dbt.yml  deltalake_maintenance.py  spark-py.yml  weatherforecast_dwh.py  weatherforecast_sim.py  weatherforecast_streaming.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: batch_validation.sql
dbt/models/marts/: dbt_customers.sql  dbt_customers.yml
dbt/sources/: dvdrental_customer.sql  dvdrental_customer.yml
spark/: deltalake_maintenance.py  weather_forecast_api.py  weatherforecast.avsc  weatherforecast_dwh_load.py  weatherforecast_dwh_prepare.py  weatherforecast_kafka.py
